Refactor item list creation to use List.of